--- a/Css/style.css
+++ b/Css/style.css
@@ -24,46 +24,45 @@ body{
 }
 
 #motorista{
+    position:absolute;
     width: 100px;
     height: 100px;
     background: teal; 
-    border-radius: 70px; 
-    border-radius: 70px; 
-    border-radius: 70px;
-    margin-top:20%;
+    border-radius: 100%; 
     margin-left:47.5%;
-    padding-top: 36px;
+    margin-top:20%;
+    padding-top: 38px;
     padding-bottom: 36px; 
     padding-left:10px; 
 }
 
 
 #passageiro{
+    position:absolute;
     width: 100px;
     height: 100px;
     background: teal; 
-    border-radius: 70px; 
-    border-radius: 70px; 
-    border-radius: 70px;
-    margin-top:-12%;
+    border-radius: 100%; 
+    margin-top:13%;
     margin-left:60%;
-    padding-top: 36px;
+    padding-top: 38px;
     padding-bottom: 36px; 
     padding-left:8px; 
+    float:left;
 }
 
 #corrida{
+    position:absolute;
     width: 100px;
     height: 100px;
     background: teal; 
-    border-radius: 70px; 
-    border-radius: 70px; 
-    border-radius: 70px;
-    margin-top:-5%;
+    border-radius: 100%; 
+    margin-top:13%;
     margin-left:35%;
     padding-top: 38px;
     padding-bottom: 38px; 
     padding-left:20px; 
+    float:left;
 }
 
 .footer {
@@ -75,6 +74,7 @@ body{
     color: dark-b;
     text-align: center;
     font-weight: bold;
+    float:bottom;
 }
 
 
