--- a/Css/style.css
+++ b/Css/style.css
@@ -79,3 +79,46 @@ body{
 
 
 
+.dropbtn {
+    background:none;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+}
+.dropbtn button:hover {color:darkorange};
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #1a1b1d;
+    
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+
+.dropdown-content a {
+    color: #e5e5e7;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: gray}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+
+
+
