--- a/Css/style.css
+++ b/Css/style.css
@@ -1,7 +1,3 @@
-body{
-    background-color:  #1a1b1d;
-}
-
 .header {
     position: relative  ;
     left: 0;
@@ -11,6 +7,32 @@ body{
     color: dark-b;
     text-align: center;
 }
+
+
+body{
+    background-color:  #1a1b1d;
+}
+
+body::before {
+    margin-top:8%;
+    background: url('bg/fogwood.jpg') no-repeat center center fixed;
+    content: '';
+    z-index: -1;
+    width: 100%;
+    height: 70%;
+    position:absolute; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
+
+
 
 .link{
     font-size="10";
@@ -23,73 +45,98 @@ body{
     text-decoration: none;
 }
 
+
+
+/*MOTORISTA*/
 #motorista{
     position:absolute;
-    width: 100px;
-    height: 100px;
-    background: teal; 
-    border-radius: 100%; 
-    margin-left:47.5%;
+    margin-left:43.5%;
     margin-top:20%;
-    padding-top: 38px;
-    padding-bottom: 36px; 
     padding-left:10px; 
 }
 
+/*Info*/
+#i-motoristas{
+    margin-left:35%;
+    margin-top:-5%;
+}
 
+/*Icone*/
+#icon-m{
+    position:absolute;
+    margin-left:47.5%;
+    margin-top:20%;
+}
+
+/*Drop down corrida*/
+#d-motorista{
+    left:115%;
+    top:45%;
+}
+
+
+
+/*PASSAGEIRO*/
 #passageiro{
     position:absolute;
-    width: 100px;
-    height: 100px;
-    background: teal; 
-    border-radius: 100%; 
-    margin-top:13%;
+    margin-top:14.5%;
     margin-left:60%;
-    padding-top: 38px;
-    padding-bottom: 36px; 
-    padding-left:8px; 
     float:left;
 }
 
+/*Info*/
+#i-passageiros{
+    margin-left:-20%;
+    margin-top:-25%;
+}
+
+/*Icone*/
+#icon-p{
+    position:absolute;
+}
+
+/*Drop down corrida*/
+#d-passageiro{
+    left:55%;
+    top:3%;
+}
+
+
+
+/*CORRIDA*/
 #corrida{
     position:absolute;
-    width: 100px;
-    height: 100px;
-    background: teal; 
-    border-radius: 100%; 
     margin-top:13%;
     margin-left:35%;
-    padding-top: 38px;
-    padding-bottom: 38px; 
-    padding-left:20px; 
     float:left;
 }
 
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: teal;
-    color: dark-b;
-    text-align: center;
-    font-weight: bold;
-    float:bottom;
+/*Info*/
+#i-corridas{
+    margin-left:5%;
+}
+
+/*Icone*/
+#icon-c{
+    position:absolute;
+    margin-left:20.5%;
+    margin-top:20%;
+}
+
+/*Drop down*/
+#d-corrida{
+    left:100%;
+    top:50%;
 }
 
 
 
-.dropbtn {
-    background:none;
-    font-size: 16px;
-    font-weight: bold;
-    border: none;
-}
-.dropbtn button:hover {color:darkorange};
 
 .dropdown {
-    position: relative;
-    display: inline-block;
+    position: absolute;
+    display: block;
+    min-width:70px;
+    min-height:70px;
 }
 
 
@@ -97,10 +144,10 @@ body{
     display: none;
     position: absolute;
     background-color: #1a1b1d;
-    
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    left:500%;
 }
 
 
@@ -116,8 +163,29 @@ body{
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
-    display: block;
+    display: inline-block;
 }
+
+
+
+
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: teal;
+    color: dark-b;
+    text-align: center;
+    font-weight: bold;
+    float:bottom;
+}
+
+
+
+
+
 
 
 
